@@ -1,6 +1,7 @@
 xine-ui (0.99.7) unstable; urgency=low
   (add entries here, newest at the top)
 
+  * Add support for XINE_EVENT_MRL_REFERENCE_EXT.
   * Use re-entrant XML parser functions (if available).
   * Distribute xine_splash.xcf (source for xine_splash.png).
   * Tidy up building of common function libraries; ensure all replacement
